--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mootiv",
+  "name": "mootiv-app-front",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,16 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^18.2.1",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
-    "@angular/material": "^18.2.1",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "mootiv": "file:",
+    "chart.js": "^4.4.4",
+    "mootiv-app-front": "file:",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
